bundle/config/namespace.yml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.NAMESPACE
  labels:
    app.kubernetes.io/part-of: #@ data.values.APP
