bundle/config/service.yml
#@ load("@ytt:data", "data")
#@ load("helpers.star", "labels_for_component")
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: #@ data.values.NAMESPACE
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector: #@ labels_for_component("redis-server")
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-db
  namespace: #@ data.values.NAMESPACE
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector: #@ labels_for_component("yelb-db")
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-appserver
  namespace: #@ data.values.NAMESPACE
spec:
  type: ClusterIP
  ports:
  - port: 4567
  selector: #@ labels_for_component("yelb-appserver")
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  namespace: #@ data.values.NAMESPACE
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector: #@ labels_for_component("yelb-ui")
